[package]
name = "pagino"
version = "1.0.1"
authors = ["Behnam Mohammadi <itten@live.com>"]
edition = "2018"

description = "Handle pagination's logic"
homepage = "https://github.com/pagino/pagino-rust"
documentation = "https://github.com/pagino/pagino-rust"
repository = "https://github.com/pagino/pagino-rust"
readme = "README.md"
keywords = ["pagination"]
categories = ["algorithms"]
license = "MIT"