[package]
name = "pagino"
version = "1.0.3"
authors = ["Behnam Mohammadi <itten@live.com>"]
edition = "2018"

description = "Handle pagination's logic"
homepage = "https://github.com/pagino/pagino-rust"
documentation = "https://github.com/pagino/pagino-rust"
repository = "https://github.com/pagino/pagino-rust"
readme = "README.md"
keywords = ["pagination"]
categories = ["algorithms", "web-programming", "data-structures"]
license = "MIT"